# mcp-agent-base

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
prompts/: system_prompt.txt
src/base_agent/: __init__.py  agent.py  api.py  mcp_client.py  openai_adapter.py  settings.py
tests/: conftest.py  test_agent.py  test_api.py  test_openai_adapter.py
